2016-10-29 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2016-10-29 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out lwnetrouterd(8).
2016-11-07 Fred Gleason <fredg@paravelsystems.com>
	* Added a libsamplerate dependency.
	* Implemented a basic audio router using HPI.
2016-11-07 Fred Gleason <fredg@paravelsystems.com>
	* Implemented an RML protocol in 'src/lwnetrouterd/protocol_rml.cpp'
	and 'src/lwnetrouterd/protocol_rml.h'.
2016-11-07 Fred Gleason <fredg@paravelsystems.com>
	* Implemented crosspoint switching in
	'src/lwnetrouterd/router_hpiaudio.cpp'.
2016-11-07 Fred Gleason <fredg@paravelsystems.com>
	* Implemented support for non-equal input and output sizes.
2016-11-07 Fred Gleason <fredg@paravelsystems.com>
	* Tuned the audio polling interval for minimal CPU utilization.
2016-11-12 Fred Gleason <fredg@paravelsystems.com>
	* Enabled bus-mastering transfers for the HPI driver in
	'src/lwnetrouterd/router_hpiaudio.cpp' and
	'src/lwnetrouterd/router_hpiaudio.h'.
2016-11-20 Fred Gleason <fredg@paravelsystems.com>
	* Added a dependency for Soundtouch.
2016-11-25 Fred Gleason <fredg@paravelsystems.com>
	* Removed the ALSA dependency.
	* Removed the SRC dependency.
	* Implemented basic delay control.